--- a/Talents1.css
+++ b/Talents1.css
@@ -26,7 +26,7 @@
  * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 }
 body {
   /* font-family: 'Courier New', Courier, monospace; */
@@ -180,6 +180,7 @@ nav {
     padding: 10px;
     position: relative;
     cursor: pointer;
+     box-sizing: border-box;
     transition: background 0.3s ease;
   }
   
